Make backend open for all, remove authentication